--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,14 @@
 
 body{
   font-family: 'Raleway', sans-serif;
-  background-color: #031926;
-  color: #E7E7E7;
+  background-color: #001315;  /* CHANGE COLOUR HERE */
+  color: #CCFCCB;  /* CHANGE COLOUR HERE */
   min-height: 100vh;
 }
 
 b{
-  font-weight: 900;
-  color: #9067C6;
+  font-weight: 1000;
+  color: #ffffff; /* CHANGE COLOUR HERE */
 }
 
 /* Scrollbar */
@@ -36,11 +36,11 @@ b{
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar-track {
-  background: #274656;
+  background: #CCFCCB;  /* CHANGE COLOUR HERE */
   border-radius: 100px;
 }
 ::-webkit-scrollbar-thumb {
-  background: #01111a;
+  background: #001315;  /* CHANGE COLOUR HERE */
   border-radius: 100px;
 }
 
@@ -90,11 +90,20 @@ b{
   font-size: 32px;
   letter-spacing: 2px;
   padding-left: 7%;
-  color: #9067C6;
+  color: #ffffff; /* CHANGE COLOUR HERE */
   display: flex;
   align-items: center;
   text-align: center;
   cursor:pointer;
+}
+
+.Logo a {
+  text-decoration: none; /* Remove underline */
+  color: inherit; /* Inherit color from parent */
+}
+
+.Logo a:hover {
+  text-decoration: none; /* Ensure it stays without underline on hover */
 }
 
 .NavbarLinks{
@@ -112,7 +121,7 @@ b{
 }
 
 .NavbarLinks a{
-  color: #c2c1c2;
+  color: #CCFCCB; /* CHANGE COLOUR HERE */
   display:flex;
   align-items: center;
   justify-content: space-between;
@@ -124,10 +133,10 @@ b{
 }
 
 .NavbarLinks a:hover{
-  color: #ffffff;
+  color: #CCFCCB; /* CHANGE COLOUR HERE */
 }
 .NavbarLinks a::after{
-  background-color: #ffffff;
+  background-color: #CCFCCB;   /* CHANGE COLOUR HERE */
   content: "";
   position: absolute;
   height: 3px;
@@ -157,7 +166,7 @@ b{
     position: fixed;
     inset: 0 0 0 50%;
     gap: 50px;
-    background-color:#431f47;
+    background-color:#00262a;
     height: 100vh;
     padding-top: max(20%,120px);
     transform: translateX(100%);
@@ -178,7 +187,7 @@ b{
 
   .bar{
     display: block;
-    background-color: #E7E7E7;
+    background-color: #ffffff;
     border-radius: 50px;
     height: 2.5px;
     width: 30px;
@@ -219,18 +228,19 @@ b{
   font-size: 38px;
   letter-spacing: 0.7px;
   padding-top: 10px;
+  padding-right: 40px;
 }
 
 .TypeEffect{
   padding: 25px 0px;
   font-weight: 600;
-  font-size: 32px;
+  font-size: 35px;
   letter-spacing: 0.6px;
 }
 
 .illustration{
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
 }
 
 @media(max-width:900px){
@@ -245,8 +255,11 @@ b{
     display: inline-block;
   }
   .illustration{
+    width: 400px;
+    height: 400px;
     margin: auto;
     margin-bottom: 50px;
+    margin-top: 50px;
   }
 }
 
@@ -296,14 +309,11 @@ b{
   font-weight: 600;
   padding-bottom: 40px;
 }
-.AboutText a{
-  color: #9067C6;
-  text-decoration: underline;
-  font-weight: bold;
+.AboutText p{
+  padding-bottom: 25px;
 }
-
-.Avatar{
-  width: 280px;
+.fea{
+  width: 600px;
 }
 
 @media(max-width:900px){
@@ -324,8 +334,8 @@ b{
     font-size: 26px;
   }
 
-  .Avatar{
-    width: 200px;
+  .fea{
+    width: 450px;
     margin-bottom: 75px;
   }
 }
@@ -345,14 +355,15 @@ b{
   align-items: center;
   justify-content: center;
   margin: 0px 25px 25px 0px;
-  border: 3px solid #431f47;
+  border: 3px solid #CCFCCB;
   font-size: 64px;
-  border-radius: 5px;
+  border-radius: 25px;
   transition: 0.5s;
+  color: white;
 }
 .SkillBox:hover{
-  transform: scale(1.2);
-  box-shadow: 0 2px 8px 0 #431f47;
+  transform: scale(1.1);
+  box-shadow: 0 2px 8px 0 #CCFCCB;
 }
 
 .SkillsHeading{
@@ -366,8 +377,8 @@ b{
   .AboutText{
     font-size: 16px;
   }
-  .Avatar{
-    width: 200px;
+  .fea{
+    width: 350px;
     margin-bottom: 25px;
   }
 
@@ -379,98 +390,6 @@ b{
     height: 100px;
     font-size: 50px;
   }
-}
-
-
-/* Project */
-
-.projectHeading{
-  text-align: center;
-  padding: 75px 0;
-  letter-spacing: 0.4px;
-  font-size: 36px;
-  margin-top: 100px;
-}
-
-.project{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 25px 5%;
-}
-
-.projectBox{
-  width: 350px;
-  border: 3px solid #431f47;
-  border-radius: 5px;
-  text-align: center;
-  padding: 15px;
-  letter-spacing: 0.5px;
-  font-size: 18px;
-  line-height: 22px;
-  
-  margin: 0px 25px 50px 25px;
-  transition: 0.5s;
-}
-.projectBox:hover{
-  transform: scale(1.05);
-  box-shadow: 0 4px 10px 0 #431f47;
-}
-
-.projectPhoto{
-  display: block;
-  width: 100%;
-  margin: 20px 0px;
-}
-
-.projectbtn{
-  font-size: 20px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 40%;
-  margin: 25px 3% 0;
-  border-radius: 5px;
-  background-color: #431f47;
-  color: #E7E7E7;
-  height: 30px;
-  cursor:pointer;
-  text-decoration: none;
-  border-style: none;
-}
-
-
-/* Resume */
-
-.ResumePage{
-  padding-top: 50px;
-  width: fit-content;
-  position: relative;
-  margin: 100px auto 0px;
-  text-align: center;
-}
-
-.resumeview{
-  pointer-events: none;
-}
-
-.downloadCV{
-  cursor:pointer;
-  margin: 25px 0px;
-  width: 200px;
-  height: 40px;
-  background-color:#431f47;
-  color: #E7E7E7;
-  text-decoration: none;
-  border-radius: 5px;
-  border-style: none; 
-  transition: all 0.5s;
-}
-
-.downloadCV:hover{
-  transition: all 0.5s;
-  background-color: #E7E7E7;
-  color: #431f47;
 }
 
 
